--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         <div class="timeline">
             <div class="timeline-item">
                 <div class="timeline-content">
+                    <i class="fa-solid fa-graduation-cap"></i>
                     <h3>Master of Science in Computer Science</h3>
                     <span>2024 - 2026</span>
                     <p>XYZ University</p>
@@ -147,6 +148,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-content">
+                    <i class="fa-solid fa-graduation-cap"></i>
                     <h3>Bachelor of Technology in Computer Science</h3>
                     <span>2020 - 2024</span>
                     <p>XYZ University</p>
@@ -154,6 +156,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-content">
+                    <i class="fa-solid fa-graduation-cap"></i>
                     <h3>Diploma in Software Engineering</h3>
                     <span>2018 - 2020</span>
                     <p>DEF Technical Institute</p>
@@ -161,6 +164,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-content">
+                    <i class="fa-solid fa-graduation-cap"></i>
                     <h3>High School Diploma</h3>
                     <span>2016 - 2018</span>
                     <p>ABC High School</p>
@@ -168,10 +172,59 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-content">
+                    <i class="fa-solid fa-graduation-cap"></i>
                     <h3>Secondary School Certificate</h3>
                     <span>2014 - 2016</span>
                     <p>GHI School</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    
+    <section class="skills">
+        <h2>My Skills</h2>
+        <p>Here are some of the skills I have developed over the years:</p>
+        <div class="skills-container">
+            <div class="skill">
+                <i class="fa-brands fa-html5"></i>
+                <span>HTML</span>
+            </div>
+            <div class="skill">
+                <i class="fa-brands fa-css3-alt"></i>
+                <span>CSS</span>
+            </div>
+            <div class="skill">
+                <i class="fa-brands fa-js"></i>
+                <span>JavaScript</span>
+            </div>
+            <div class="skill">
+                <i class="fa-brands fa-react"></i>
+                <span>React</span>
+            </div>
+            <div class="skill">
+                <i class="fa-brands fa-java"></i>
+                <span>Java</span>
+            </div>
+            <div class="skill">
+                <i class="fa-brands fa-android"></i>
+                <span>Android Development</span>
+            </div>
+            <div class="skill">
+                <i class="fa-solid fa-gamepad"></i>
+                <span>Game Development</span>
+            </div>
+            <div class="skill">
+                <i class="fa-solid fa-database"></i>
+                <span>SQL</span>
+            </div>
+            <div class="skill">
+                <i class="fa-brands fa-node-js"></i>
+                <span>Node.js</span>
+            </div>
+            <div class="skill">
+                <i class="fa-brands fa-github"></i>
+                <span>Git & GitHub</span>
             </div>
         </div>
     </section>
