Skills UI Improvement

--- a/index.html
+++ b/index.html
@@ -184,47 +184,67 @@
     
     <section class="skills">
         <h2>My Skills</h2>
-        <p>Here are some of the skills I have developed over the years:</p>
-        <div class="skills-container">
-            <div class="skill">
-                <i class="fa-brands fa-html5"></i>
-                <span>HTML</span>
+        <p>These are some of the skills I have honed over the years:</p>
+        <div class="skills-grid">
+            <div class="skill-card">
+                <div class="icon-container">
+                    <i class="fa-brands fa-html5"></i>
+                </div>
+                <h3>HTML</h3>
             </div>
-            <div class="skill">
-                <i class="fa-brands fa-css3-alt"></i>
-                <span>CSS</span>
+            <div class="skill-card">
+                <div class="icon-container">
+                    <i class="fa-brands fa-css3-alt"></i>
+                </div>
+                <h3>CSS</h3>
             </div>
-            <div class="skill">
-                <i class="fa-brands fa-js"></i>
-                <span>JavaScript</span>
+            <div class="skill-card">
+                <div class="icon-container">
+                    <i class="fa-brands fa-js"></i>
+                </div>
+                <h3>JavaScript</h3>
             </div>
-            <div class="skill">
-                <i class="fa-brands fa-react"></i>
-                <span>React</span>
+            <div class="skill-card">
+                <div class="icon-container">
+                    <i class="fa-brands fa-react"></i>
+                </div>
+                <h3>React</h3>
             </div>
-            <div class="skill">
-                <i class="fa-brands fa-java"></i>
-                <span>Java</span>
+            <div class="skill-card">
+                <div class="icon-container">
+                    <i class="fa-brands fa-java"></i>
+                </div>
+                <h3>Java</h3>
             </div>
-            <div class="skill">
-                <i class="fa-brands fa-android"></i>
-                <span>Android Development</span>
+            <div class="skill-card">
+                <div class="icon-container">
+                    <i class="fa-brands fa-android"></i>
+                </div>
+                <h3>Android Development</h3>
             </div>
-            <div class="skill">
-                <i class="fa-solid fa-gamepad"></i>
-                <span>Game Development</span>
+            <div class="skill-card">
+                <div class="icon-container">
+                    <i class="fa-solid fa-gamepad"></i>
+                </div>
+                <h3>Game Development</h3>
             </div>
-            <div class="skill">
-                <i class="fa-solid fa-database"></i>
-                <span>SQL</span>
+            <div class="skill-card">
+                <div class="icon-container">
+                    <i class="fa-solid fa-database"></i>
+                </div>
+                <h3>SQL</h3>
             </div>
-            <div class="skill">
-                <i class="fa-brands fa-node-js"></i>
-                <span>Node.js</span>
+            <div class="skill-card">
+                <div class="icon-container">
+                    <i class="fa-brands fa-node-js"></i>
+                </div>
+                <h3>Node.js</h3>
             </div>
-            <div class="skill">
-                <i class="fa-brands fa-github"></i>
-                <span>Git & GitHub</span>
+            <div class="skill-card">
+                <div class="icon-container">
+                    <i class="fa-brands fa-github"></i>
+                </div>
+                <h3>Git & GitHub</h3>
             </div>
         </div>
     </section>
