Testimonials Section Implementation

--- a/index.html
+++ b/index.html
@@ -313,6 +313,38 @@
         </div>
     </section>
 
+
+    <section class="testimonials">
+        <h2>Testimonials</h2>
+        <div class="testimonial-cards">
+            <div class="testimonial-card">
+                <i class="fas fa-quote-left"></i>
+                <p>"Working with Alex has been an absolute pleasure. His attention to detail and dedication to his craft are unparalleled. Highly recommend!"</p>
+                <div class="client-info">
+                    John Doe
+                    <span>CEO, Company XYZ</span>
+                </div>
+            </div>
+            <div class="testimonial-card">
+                <i class="fas fa-quote-left"></i>
+                <p>"Alex's creativity and problem-solving skills have been a huge asset to our project. His professionalism is top-notch."</p>
+                <div class="client-info">
+                    Jane Smith
+                    <span>Project Manager, ABC Corp</span>
+                </div>
+            </div>
+            <div class="testimonial-card">
+                <i class="fas fa-quote-left"></i>
+                <p>"I have worked with many developers, but Alex stands out for his passion and commitment. He delivers high-quality work every time."</p>
+                <div class="client-info">
+                    Sarah Johnson
+                    <span>Lead Developer, Tech Solutions</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+
     <section class="contact-me">
         <h2>Contact Me</h2>
         <p>Ready to connect? Find all the ways to get in touch, whether it’s through email, social media, or a contact form. Let’s start a conversation!</p>
