Project Page Implementations

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                     <img src="img/main1.jpg" alt="Project 1" class="circular-img">
                 </div>
                 <div class="project-info">
-                    <h3>Project Title 1</h3>
+                    <h3>Code Builder</h3>
                     <p>A brief description of Project 1, highlighting the main features and technologies used.</p>
-                    <a href="#" class="btn">View Project</a>
+                    <a href="Project Pages/Code Builder.html" class="btn">View Project</a>
                 </div>
             </div>
             <div class="project-card">
