Project Overview Section Implemation

--- a/Project Pages/Code Builder.html
+++ b/Project Pages/Code Builder.html
@@ -41,69 +41,41 @@
     </section>
 
 
-     <!-- Project Description Section -->
-     <section class="project-description">
-        <div class="container">
-            <h1>Project Name</h1>
-            <p>A brief overview of the project, its goals, and the problems it solves. This is where you can introduce your project to the audience.</p>
-        </div>
-    </section>
+     <section class="project-overview">
+    <div class="container">
+        <h2>Project Overview</h2>
+        <p class="project-description">
+            This project, <strong>[Project Name]</strong>, is a [type of project, e.g., web application, mobile app, etc.] designed to [briefly describe the purpose or goal of the project]. The main features of this project include:
+        </p>
+        <ul class="key-features">
+            <li>Feature 1: [Brief description of the feature]</li>
+            <li>Feature 2: [Brief description of the feature]</li>
+            <li>Feature 3: [Brief description of the feature]</li>
+            <li>Feature 4: [Brief description of the feature]</li>
+        </ul>
+    </div>
+</section>
 
-    <!-- Project Features Section -->
-    <section class="project-features">
-        <div class="container">
-            <h2>Features</h2>
-            <div class="feature-grid">
-                <div class="feature-card">
-                    <i class="fas fa-check-circle"></i>
-                    <h3>Feature 1</h3>
-                    <p>Description of the first feature.</p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-check-circle"></i>
-                    <h3>Feature 2</h3>
-                    <p>Description of the second feature.</p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-check-circle"></i>
-                    <h3>Feature 3</h3>
-                    <p>Description of the third feature.</p>
-                </div>
+<section class="project-overview">
+    <div class="container">
+        <h2>Project Overview</h2>
+        <div class="overview-content">
+            <div class="overview-text">
+                <h3>Project Title</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at volutpat turpis, vitae pulvinar eros. Curabitur nec enim quis augue euismod aliquet. Proin vitae nunc non nisi aliquam mollis.</p>
+            </div>
+            <div class="overview-details">
+                <h4>Project Details</h4>
+                <ul>
+                    <li><strong>Technologies Used:</strong> HTML, CSS, JavaScript</li>
+                    <li><strong>Duration:</strong> 3 months</li>
+                    <li><strong>Team:</strong> Solo</li>
+                    <li><strong>Status:</strong> Completed</li>
+                </ul>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Project Roadmap Section -->
-    <section class="project-roadmap">
-        <div class="container">
-            <h2>Roadmap</h2>
-            <ul class="roadmap-list">
-                <li>Step 1: Initial planning and setup.</li>
-                <li>Step 2: Development of core features.</li>
-                <li>Step 3: Testing and debugging.</li>
-                <li>Step 4: Deployment and launch.</li>
-                <li>Step 5: Future updates and maintenance.</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Project Photos Section -->
-    <section class="project-photos">
-        <div class="container">
-            <h2>Gallery</h2>
-            <div class="photo-grid">
-                <img src="img/project-photo1.jpg" alt="Project Photo 1">
-                <img src="img/project-photo2.jpg" alt="Project Photo 2">
-                <img src="img/project-photo3.jpg" alt="Project Photo 3">
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 My Portfolio. All rights reserved.</p>
-        </div>
-    </footer>
 
 </body>
