Features & Technologies Used Section Implementation

--- a/Project Pages/Code Builder.html
+++ b/Project Pages/Code Builder.html
@@ -41,41 +41,55 @@
     </section>
 
 
-     <section class="project-overview">
-    <div class="container">
-        <h2>Project Overview</h2>
-        <p class="project-description">
-            This project, <strong>[Project Name]</strong>, is a [type of project, e.g., web application, mobile app, etc.] designed to [briefly describe the purpose or goal of the project]. The main features of this project include:
-        </p>
-        <ul class="key-features">
-            <li>Feature 1: [Brief description of the feature]</li>
-            <li>Feature 2: [Brief description of the feature]</li>
-            <li>Feature 3: [Brief description of the feature]</li>
-            <li>Feature 4: [Brief description of the feature]</li>
-        </ul>
-    </div>
-</section>
-
-<section class="project-overview">
-    <div class="container">
-        <h2>Project Overview</h2>
-        <div class="overview-content">
-            <div class="overview-text">
-                <h3>Project Title</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at volutpat turpis, vitae pulvinar eros. Curabitur nec enim quis augue euismod aliquet. Proin vitae nunc non nisi aliquam mollis.</p>
-            </div>
-            <div class="overview-details">
-                <h4>Project Details</h4>
-                <ul>
-                    <li><strong>Technologies Used:</strong> HTML, CSS, JavaScript</li>
-                    <li><strong>Duration:</strong> 3 months</li>
-                    <li><strong>Team:</strong> Solo</li>
-                    <li><strong>Status:</strong> Completed</li>
-                </ul>
+    <section class="project-overview">
+        <div class="container">
+            <h2>Project Overview</h2>
+            <div class="overview-content">
+                <div class="overview-text">
+                    <h3>Project Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at volutpat turpis, vitae pulvinar eros. Curabitur nec enim quis augue euismod aliquet. Proin vitae nunc non nisi aliquam mollis.</p>
+                </div>
+                <div class="overview-details">
+                    <h4>Project Details</h4>
+                    <ul>
+                        <li><strong>Technologies Used:</strong> HTML, CSS, JavaScript</li>
+                        <li><strong>Duration:</strong> 3 months</li>
+                        <li><strong>Team:</strong> Solo</li>
+                        <li><strong>Status:</strong> Completed</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+
+    <section class="features-tech">
+        <div class="container">
+            <h2>Features & Technologies Used</h2>
+            <div class="features-tech-content">
+                <div class="features">
+                    <h3>Features</h3>
+                    <ul>
+                        <li>Responsive Design</li>
+                        <li>Interactive User Interface</li>
+                        <li>Real-time Data Updates</li>
+                        <li>Cross-browser Compatibility</li>
+                        <li>SEO Optimization</li>
+                    </ul>
+                </div>
+                <div class="technologies">
+                    <h3>Technologies Used</h3>
+                    <ul>
+                        <li>HTML5 & CSS3</li>
+                        <li>JavaScript (ES6+)</li>
+                        <li>React.js</li>
+                        <li>Node.js & Express</li>
+                        <li>MongoDB</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 
 
 </body>
