Features & Technologies Used Section Implementation

--- a/Project Pages/Code Builder.html
+++ b/Project Pages/Code Builder.html
@@ -62,33 +62,84 @@
         </div>
     </section>
 
-    <section class="features-tech">
-        <div class="container">
-            <h2>Features & Technologies Used</h2>
-            <div class="features-tech-content">
-                <div class="features">
-                    <h3>Features</h3>
-                    <ul>
-                        <li>Responsive Design</li>
-                        <li>Interactive User Interface</li>
-                        <li>Real-time Data Updates</li>
-                        <li>Cross-browser Compatibility</li>
-                        <li>SEO Optimization</li>
-                    </ul>
-                </div>
-                <div class="technologies">
-                    <h3>Technologies Used</h3>
-                    <ul>
-                        <li>HTML5 & CSS3</li>
-                        <li>JavaScript (ES6+)</li>
-                        <li>React.js</li>
-                        <li>Node.js & Express</li>
-                        <li>MongoDB</li>
-                    </ul>
-                </div>
-            </div>
+<section class="features-section">
+    <h2>Features</h2>
+    <div class="features-grid">
+        <!-- Feature 1 -->
+        <div class="feature-item">
+            <i class="fa-solid fa-code"></i>
+            <h3>Responsive Design</h3>
+            <p>Ensured that the website is fully responsive across all devices.</p>
         </div>
-    </section>
+        <!-- Feature 2 -->
+        <div class="feature-item">
+            <i class="fa-solid fa-paint-brush"></i>
+            <h3>Modern UI/UX</h3>
+            <p>Implemented a modern and clean user interface with an emphasis on user experience.</p>
+        </div>
+        <!-- Feature 3 -->
+        <div class="feature-item">
+            <i class="fa-solid fa-laptop-code"></i>
+            <h3>Interactive Animations</h3>
+            <p>Added smooth and engaging animations to enhance user interaction.</p>
+        </div>
+        <!-- Feature 4 -->
+        <div class="feature-item">
+            <i class="fa-solid fa-database"></i>
+            <h3>Database Integration</h3>
+            <p>Integrated with a robust database to handle all data operations securely.</p>
+        </div>
+        <!-- Feature 5 -->
+        <div class="feature-item">
+            <i class="fa-solid fa-shield-alt"></i>
+            <h3>Security Measures</h3>
+            <p>Implemented security best practices to ensure user data is protected.</p>
+        </div>
+        <!-- Feature 6 -->
+        <div class="feature-item">
+            <i class="fa-solid fa-cogs"></i>
+            <h3>API Integration</h3>
+            <p>Integrated third-party APIs to extend the functionality of the application.</p>
+        </div>
+    </div>
+</section>
+
+<section class="technologies-section">
+    <h2>Technologies Used</h2>
+    <div class="technologies-grid">
+        <!-- Technology 1 -->
+        <div class="tech-item">
+            <i class="fa-brands fa-html5"></i>
+            <h3>HTML5</h3>
+        </div>
+        <!-- Technology 2 -->
+        <div class="tech-item">
+            <i class="fa-brands fa-css3-alt"></i>
+            <h3>CSS3</h3>
+        </div>
+        <!-- Technology 3 -->
+        <div class="tech-item">
+            <i class="fa-brands fa-js-square"></i>
+            <h3>JavaScript</h3>
+        </div>
+        <!-- Technology 4 -->
+        <div class="tech-item">
+            <i class="fa-brands fa-node"></i>
+            <h3>Node.js</h3>
+        </div>
+        <!-- Technology 5 -->
+        <div class="tech-item">
+            <i class="fa-brands fa-react"></i>
+            <h3>React</h3>
+        </div>
+        <!-- Technology 6 -->
+        <div class="tech-item">
+            <i class="fa-brands fa-docker"></i>
+            <h3>Docker</h3>
+        </div>
+    </div>
+</section>
+
     
 
 
