Improved UI and easier User-Friendly design

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     <img src="img/my photo.png" alt="Project 2" class="circular-img">
                 </div>
                 <div class="project-info">
-                    <h3>Project Title 2</h3>
+                    <h3>Eye of Blind</h3>
                     <p>A brief description of Project 2, highlighting the main features and technologies used.</p>
-                    <a href="#" class="btn">View Project</a>
+                    <a href="Project Pages/Eye of Blind.html" class="btn">View Project</a>
                 </div>
             </div>
             <div class="project-card">
@@ -117,9 +117,9 @@
                     <img src="img/project3.jpg" alt="Project 3" class="circular-img">
                 </div>
                 <div class="project-info">
-                    <h3>Project Title 3</h3>
+                    <h3>Echo Play App</h3>
                     <p>A brief description of Project 3, highlighting the main features and technologies used.</p>
-                    <a href="#" class="btn">View Project</a>
+                    <a href="Project Pages/Eye of Blind.html" class="btn">View Project</a>
                 </div>
             </div>
             <div class="project-card">
