--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
             <div class="timeline-item">
                 <div class="timeline-content">
                     <i class="fa-solid fa-graduation-cap"></i>
-                    <h3>Master of Science in Computer Science</h3>
-                    <span>2024 - 2026</span>
-                    <p>XYZ University</p>
+                    <h3>Diploma in Computer Science</h3>
+                    <span>2021 - 2024</span>
+                    <p>Dr. D. Y. Patil Polytechnique, Kasaba Bawada Kolhapur</p>
                 </div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-content">
                     <i class="fa-solid fa-graduation-cap"></i>
                     <h3>Bachelor of Technology in Computer Science</h3>
-                    <span>2020 - 2024</span>
-                    <p>XYZ University</p>
+                    <span>2024</span>
+                    <p>Shivaji University</p>
                 </div>
             </div>
             <div class="timeline-item">
