--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <img src="img/project4.jpg" alt="Project 4" class="circular-img">
+                    <img src="img/project4.jpg" alt="SVR Application" class="circular-img">
                 </div>
                 <div class="project-info">
                     <h3>Project Title 4</h3>
                     <p>A brief description of Project 4, highlighting the main features and technologies used.</p>
-                    <a href="#" class="btn">View Project</a>
+                    <a href="Project Pages/SVR.html" class="btn">View Project</a>
                 </div>
             </div>
         </div>
