Deletion of Project Pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Beast PJ</a>
+        <a href="#" class="logo">Prathamesh Jadhav</a>
 
         <nav>
             <a href="#" class="active"> Home</a>
@@ -26,7 +26,7 @@
             <img src="img/main1.jpg" alt="">
         </div>
         <div class="home-content">
-            <h1>Hi, It's <span>Beast PJ</span></h1>
+            <h1>Hi, It's <span>Prathamesh Jadhav</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>I'm a dedicated developer focused on creating innovative, user-friendly solutions. With a blend of technical skills and design expertise, I turn complex challenges into seamless digital experiences. From building high-performance websites to mobile apps, I’m passionate about using technology to bring ideas to life and drive success.</p>
             <div class="social-icons">
@@ -319,7 +319,7 @@
         <div class="testimonial-cards">
             <div class="testimonial-card">
                 <i class="fas fa-quote-left"></i>
-                <p>"Working with Alex has been an absolute pleasure. His attention to detail and dedication to his craft are unparalleled. Highly recommend!"</p>
+                <p>"Working with Prathamesh Jadhav has been an absolute pleasure. His attention to detail and dedication to his craft are unparalleled. Highly recommend!"</p>
                 <div class="client-info">
                     John Doe
                     <span>CEO, Company XYZ</span>
@@ -327,7 +327,7 @@
             </div>
             <div class="testimonial-card">
                 <i class="fas fa-quote-left"></i>
-                <p>"Alex's creativity and problem-solving skills have been a huge asset to our project. His professionalism is top-notch."</p>
+                <p>"Prathamesh Jadhav's creativity and problem-solving skills have been a huge asset to our project. His professionalism is top-notch."</p>
                 <div class="client-info">
                     Jane Smith
                     <span>Project Manager, ABC Corp</span>
@@ -335,7 +335,7 @@
             </div>
             <div class="testimonial-card">
                 <i class="fas fa-quote-left"></i>
-                <p>"I have worked with many developers, but Alex stands out for his passion and commitment. He delivers high-quality work every time."</p>
+                <p>"I have worked with many developers, but Prathamesh Jadhav stands out for his passion and commitment. He delivers high-quality work every time."</p>
                 <div class="client-info">
                     Sarah Johnson
                     <span>Lead Developer, Tech Solutions</span>
@@ -393,7 +393,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <a href="#" class="logo">Alex</a>
+                <a href="#" class="logo">Prathamesh Jadhav</a>
             </div>
             <div class="footer-links">
                 <a href="#home">Home</a>
@@ -410,7 +410,7 @@
                 <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <div class="footer-copy">
-                <p>&copy; 2024 Alex. All rights reserved.</p>
+                <p>&copy; 2024 Prathamesh Jadhav. All rights reserved.</p>
             </div>
         </div>
     </footer>
