Social Media Updatation

--- a/index.html
+++ b/index.html
@@ -64,9 +64,15 @@
                 <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
             </div>
             <div class="social_icons">
-                <div class="icon"><i class="uil uil-instagram"></i></div>
-                <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                <div class="icon"><i class="uil uil-github-alt"></i></div>
+                <a href="https://www.instagram.com/beast.pj" target="_blank" rel="noopener noreferrer" class="icon-link">
+                    <div class="icon"><i class="uil uil-instagram"></i></div>
+                </a>
+                <a href="https://www.linkedin.com/in/prathamesh--jadhav" target="_blank" rel="noopener noreferrer" class="icon-link">
+                    <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+                </a>
+                <a href="https://github.com/Beast-PJ" target="_blank" rel="noopener noreferrer" class="icon-link">
+                    <div class="icon"><i class="uil uil-github-alt"></i></div>
+                </a>
             </div>
           </div>
           <div class="featured-image">
@@ -82,7 +88,8 @@
           </div>
 
        </section>
-       <!-- -------------- ABOUT BOX ---------------- -->
+
+
        <section class="section" id="about">
           <div class="top-header">
             <h1>About Me</h1>
@@ -216,9 +223,15 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <div class="icon"><i class="uil uil-instagram"></i></div>
-            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-            <div class="icon"><i class="uil uil-github-alt"></i></div>
+                <a href="https://www.instagram.com/beast.pj" target="_blank" rel="noopener noreferrer" class="icon-link">
+                    <div class="icon"><i class="uil uil-instagram"></i></div>
+                </a>
+                <a href="https://www.linkedin.com/in/prathamesh--jadhav" target="_blank" rel="noopener noreferrer" class="icon-link">
+                    <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+                </a>
+                <a href="https://github.com/Beast-PJ" target="_blank" rel="noopener noreferrer" class="icon-link">
+                    <div class="icon"><i class="uil uil-github-alt"></i></div>
+                </a>
         </div>
         <div class="bottom-footer">
             <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Prathamesh Jadhav</a> - All rights reserved</p>
