--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
         <div class="nav-button">
-            <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+            <button class="btn">Download Resume <i class="uil uil-file-alt"></i></button>
         </div>
         <div class="nav-menu-btn">
             <i class="uil uil-bars" onclick="myMenuFunction()"></i>
@@ -50,7 +50,7 @@
         <section class="featured-box" id="home">
           <div class="featured-text">
             <div class="featured-text-card">
-                <span>Prathamesh </span>
+                <span>Prathamesh</span>
             </div>
             <div class="featured-name">
                 <p>I'm <span class="typedText"></span></p>
@@ -61,7 +61,7 @@
             </div>
             <div class="featured-text-btn">
                 <button class="btn blue-btn">Hire Me</button>
-                <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+                <button class="btn">Download Resume <i class="uil uil-file-alt"></i></button>
             </div>
             <div class="social_icons">
                 <a href="https://www.instagram.com/beast.pj" target="_blank" rel="noopener noreferrer" class="icon-link">
@@ -104,7 +104,7 @@
                        WordPress.
                     </p>
                     <div class="about-btn">
-                        <button class="btn">Download CV <i class="uil uil-import"></i></button>
+                        <button class="btn">Download Resume <i class="uil uil-import"></i></button>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
              <div class="col">
                 <div class="contact-info">
                     <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                    <p><i class="uil uil-envelope"></i> Email: Prathameshjadhav61657@gmail.com</p>
+                    <p><i class="uil uil-envelope"></i> Email: p.jadhav61657@gmail.com</p>
                 </div>
              </div>
              <div class="col">
