Basic Structure of completed Projects page

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="top-header">
               <h1>Projects</h1>
           </div>
-          <div class="project-container">
+          <div class="project-container" id="completedProjectButton">
             <div class="project-box">
                 <i class="uil uil-briefcase-alt"></i>
                 <h3>Completed</h3>
